--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: plotTools
 Type: Package
-Title: What the Package Does (Title Case)
+Title: A Plotting Toolkit
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
+Author: Chuchen Tao
+Maintainer: Chuchen Tao <Chuchen.Tao@campus.lmu.de>
+Description: This package provides functions for creating custom scatter plots and histograms.
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+import: ggplot2
+RoxygenNote: 7.3.2
