--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Chuchen Tao
 Maintainer: Chuchen Tao <Chuchen.Tao@campus.lmu.de>
 Description: This package provides functions for creating custom scatter plots and histograms.
-License: What license is it under?
+License: MIT
 Encoding: UTF-8
 LazyData: true
 import: ggplot2
